adding python api server and dockerfile
