# openapi.yaml
@@ -3,7 +3,7 @@ info:
   title: LED Box API
   version: 1.0.0
 paths:
-  /led-pattern:
+  /led-patterns:
     post:
       operationId: createPattern
       requestBody:
@@ -15,19 +15,11 @@ paths:
       responses:
         '201':
           description: Created
-        '400':
-          description: Bad Request
-    patch:
-      operationId: updatePattern
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/LEDPattern'
-        required: true
-      responses:
-        '200':
-          description: Ok
+          content:
+            application/json:
+              schema:
+                type: integer
+                description: Id of the created pattern
         '400':
           description: Bad Request
     get:
@@ -44,6 +36,50 @@ paths:
                   $ref: '#/components/schemas/LEDPattern'
         '400':
           description: Bad Request
+  '/led-patterns/{id}':
+    patch:
+      operationId: updatePattern
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+          required: true
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/LEDPattern'
+        required: true
+      responses:
+        '200':
+          description: Ok
+        '400':
+          description: Bad Request
+        '404':
+          description: Not Found
+  /led-patterns/active:
+    put:
+      description: Put new active pattern
+      operationId: runPattern
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              description: Id of the new active pattern
+              properties:
+                id:
+                  type: integer
+              required:
+                - id
+      responses:
+        '200':
+          description: Ok
+        '400':
+          description: Bad Request
+        '404':
+          description: Not Found
 components:
   schemas:
     LEDPattern:
@@ -54,7 +90,7 @@ components:
         name:
           type: string
           maxLength: 20
-        colors: 
+        colors:
           description: Colors that will be displayed in-line
           type: array
           items:
@@ -62,13 +98,13 @@ components:
           minItems: 1
           maxItems: 5
         repitionFactor:
-          description: Describes how often the colors will be repeated in the LED strip. 0 = No repetition, 1 = One LED per color
+          description: 'Describes how often the colors will be repeated in the LED strip. 0 = No repetition, 1 = One LED per color'
           type: number
           format: float
           minimum: 0
           maximum: 1
         colorGradientLengthFactor:
-          description: Describes how many of the LED of one color create a gradient to the next and previous color. 0 = No gradient, 0.5 Half of LED create a gradient to the next and previous color
+          description: 'Describes how many of the LED of one color create a gradient to the next and previous color. 0 = No gradient, 0.5 Half of LED create a gradient to the next and previous color'
           type: number
           format: float
           minimum: 0
@@ -86,7 +122,7 @@ components:
           minimum: 0.1
           maximum: 3
         blinkDimmingPeriodFactor:
-          description: Describes how much of the blinking time is used for blinking. 0 = No dimming, 1 = Full period between on and off will be dimmed
+          description: 'Describes how much of the blinking time is used for blinking. 0 = No dimming, 1 = Full period between on and off will be dimmed'
           type: number
           format: float
           minimum: 0
@@ -98,22 +134,28 @@ components:
           minimum: 1
           maximum: 300
         chaseLengthFactor:
-          description: Describes how many of the strip's LED will be used for the chase. 0 = 1 LED, 0.99 = 99% of LED
+          description: "Describes how many of the strip's LED will be used for the chase. 0 = 1 LED, 0.99 = 99% of LED"
           type: number
           format: float
           minimum: 0
           maximum: 0.99
         chaseGradientLengthFactor:
-          description: Describes how many of the LED of one the chase create a gradient to the next and previous color. 0 = No gradient, 0.5 Half of the chase's LED create a gradient to the next and previous color
+          description: "Describes how many of the LED of one the chase create a gradient to the next and previous color. 0 = No gradient, 0.5 Half of the chase's LED create a gradient to the next and previous color"
           type: number
           format: float
           minimum: 0
           maximum: 0.5
         chaseForeground:
-          description: When null, the pattern's color will be used for the chase and the background will be black. When not null, the chaseForeground will be used for the chase and the pattern's color will be used for the background
+          description: "When null, the pattern's color will be used for the chase and the background will be black. When not null, the chaseForeground will be used for the chase and the pattern's color will be used for the background"
           nullable: true
           allOf:
             - $ref: '#/components/schemas/Color'
+      required:
+        - name
+        - colors
+        - repitionFactor
+        - colorGradientLengthFactor
+        - animationType
     Color:
       description: RGB Color
       type: object
@@ -128,9 +170,8 @@ components:
           type: integer
           minimum: 0
           maximum: 255
-        b: 
+        b:
           description: Blue
           type: integer
           minimum: 0
           maximum: 255
-
